@@ -1,0 +1,7 @@
+{
+    "parent": "minecraft:item/handheld",
+    "textures": {
+      "layer0": "kubejs:item/wooden_trowel"
+    }
+}
+  
