@@ -43,3 +43,4 @@ Ported custom items from Infinite Horizons 1.20.1.
 Ported tag scripts from Infinite Horizons 1.20.1 (with some edits).
 Ported Farmer's Delight Cutting Board Recipes from Infinite Horizons 1.20.1 (not yet implemented).
 Added Infinite Horizons Pebbles (Stone and Andesite).
+Added Infinite Horizons Wooden and Stone Trowel (for obtaining pebbles).
